# facebook-clang-plugins

./: .arcconfig  .clang-format  .deweyconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.common  Makefile.config  Makefile.extra  Makefile.rules  PATENTS  README.md
analyzer/: CMakeLists.txt  DanglingDelegateChecker.cpp  DanglingDelegateCommon.cpp  DanglingDelegateCommon.h  DanglingDelegateFactFinder.cpp  DanglingDelegateFactFinder.h  DoubleBooleanArgumentChecker.cpp  GlobalOrStaticVariableForDispatchOnceChecker.cpp  Makefile  ObjCARCQualifierChecker.cpp  PluginMain.cpp  PluginMainRegistry.h  PropertySynthesizeChecker.cpp  README.md  SuspiciousRespondsToSelectorChecker.cpp
analyzer/tests/: DanglingDelegateCheckerTest_BAD.m.exp  DanglingDelegateCheckerTest_OK.m  DanglingDelegateCheckerTest_OK.m.exp  DoubleBooleanArgumentChecker.m  DoubleBooleanArgumentChecker.m.exp  GlobalOrStaticVariableForDispatchOnceCheckerTest.m  GlobalOrStaticVariableForDispatchOnceCheckerTest.m.exp  PropertySynthesizeCheckerTest1.m  PropertySynthesizeCheckerTest1.m.exp  PropertySynthesizeCheckerTest2.m  PropertySynthesizeCheckerTest3.h  PropertySynthesizeCheckerTest3.m  PropertySynthesizeCheckerTest3.m.exp  PropertySynthesizeCheckerTest4.m  SuspiciousRespondsToSelectorCheckerTest1.m  SuspiciousRespondsToSelectorCheckerTest1.m.exp
analyzer/tests_arc/: DanglingDelegateCheckerTestARC_BAD.m  DanglingDelegateCheckerTestARC_BAD.m.exp  DanglingDelegateCheckerTestARC_OK.m  ObjCARCQualifierChecker.m  ObjCARCQualifierChecker.m.exp
analyzer/tests_noinline/: DanglingDelegateCheckerTest_BAD_noinline.m  DanglingDelegateCheckerTest_BAD_noinline.m.exp  DanglingDelegateCheckerTest_OK_noinline.m  DanglingDelegateCheckerTest_OK_noinline.m.exp
libtooling/: ASTExporter.cpp  ASTExporter.h  ATD_GUIDELINES.md  AttrParameterVectorStream.cpp  AttrParameterVectorStream.h  CMakeLists.txt  DeduplicationService.cpp  DeduplicationService.h  FileServices.cpp  FileServices.h  FileUtils.cpp  FileUtils.h  Makefile  NamePrinter.h  PrintFiles.cpp  README.md  SimplePluginASTAction.cpp  SimplePluginASTAction.h  ast_exporter_bin.cpp  record_copied_file.cpp
libtooling/atdlib/: ATDWriter.h  Makefile  extract_atd_from_cpp.py  normalize_names_in_atd.py
libtooling/atdlib/tests/: binioutest.cpp  binioutest.exp  binioutest.sh  extract_test.cpp  extract_test.cpp.exp  jsontest.cpp  jsontest.exp  normalize_test.atd
libtooling/tests/: FoundationStub.h  Hello.m  ObjCBridgeTransferTest.m  ObjCTest.m  available_expression.m  bind_temporary.cpp  c_attributes.c  c_cast.cpp  class_template.cpp  comments.c  const_cast.cpp  copy_constructor.cpp  dynamic_cast.cpp  expr_with_cleanups.cpp  friend.cpp  function_template.cpp  generic_selector_expression.c  hello_world.cpp  inheritance.cpp  inheriting_constructor.cpp  lambda.cpp  materialize_temporary.cpp  namespace_decl.cpp  new.cpp  no_except_expr.cpp  objcpp_template_unboxing.mm  offset_of.cpp  optional.m  sizeof_static_evaluation.cpp  struct.cpp  template_instantiations.cpp  this.cpp  type_trait.cpp  unresolved_lookup.cpp  using_directive.cpp  virtual_bases.cpp
libtooling/tests/BiniouASTExporter/: Hello.m.exp  ObjCBridgeTransferTest.m.exp  ObjCTest.m.exp  available_expression.m.exp  bind_temporary.cpp.exp  c_attributes.c.exp  c_cast.cpp.exp  class_template.cpp.exp  comments.c.exp  const_cast.cpp.exp  dynamic_cast.cpp.exp  expr_with_cleanups.cpp.exp  filter.sh  friend.cpp.exp  function_template.cpp.exp  generic_selector_expression.c.exp  inheritance.cpp.exp  inheriting_constructor.cpp.exp  lambda.cpp.exp  materialize_temporary.cpp.exp  namespace_decl.cpp.exp  new.cpp.exp  no_except_expr.cpp.exp  objcpp_template_unboxing.mm.exp  offset_of.cpp.exp  optional.m.exp  sizeof_static_evaluation.cpp.exp  struct.cpp.exp  template_instantiations.cpp.exp  this.cpp.exp  type_trait.cpp.exp  unresolved_lookup.cpp.exp  using_directive.cpp.exp  virtual_bases.cpp.exp
libtooling/tests/JsonASTExporter/: Hello.m.exp  ObjCBridgeTransferTest.m.exp  ObjCTest.m.exp  bind_temporary.cpp.exp  c_attributes.c.exp  c_cast.cpp.exp  class_template.cpp.exp  comments.c.exp  const_cast.cpp.exp  dynamic_cast.cpp.exp  expr_with_cleanups.cpp.exp  filter.sh  friend.cpp.exp  function_template.cpp.exp  hello_world.cpp.exp  inheritance.cpp.exp  inheriting_constructor.cpp.exp  lambda.cpp.exp  materialize_temporary.cpp.exp  namespace_decl.cpp.exp  new.cpp.exp  no_except_expr.cpp.exp  objcpp_template_unboxing.mm.exp  offset_of.cpp.exp  optional.m.exp  struct.cpp.exp  (+7 more)
(+86 files in other folders)
